@@ -15,6 +15,7 @@ at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)
 Version 1.0.8.10
   -  Added language files
      * C: Loadrunner dialect (Stuart Moncrieff)
+     * CoffeeScript (Trevor Burnham)
      * EPC (Thorsten Muehlfelder)
      * Falcon (billykater)
   -  Small bugfix in LangCheck when looking for language files
